# DERP

./: .gitignore  flake.nix  manage.py  pyproject.toml
delicious_erp/: asgi.py  settings.py  urls.py  wsgi.py
erp/: admin.py  forms.py  models.py  tests.py  views.py
erp/migrations/: 0001_initial.py  0002_alter_costcenter_parent.py  0002_purchase_comment.py  0003_alter_purchase_supplier.py  0004_alter_purchase_comment_alter_purchase_supplier.py  0005_purchase_create_date_purchase_last_update_date.py  0006_funding_create_date_funding_last_update_date.py  0007_funding_comment.py  0008_rename_actual_price_purchase_total_price.py
erp/static/erp/: style.css
erp/templates/: balance_sheet.html  base_standard.html  cost_center.html  costcenter_tree.html  create_purchase.html  home.html  purchase_form.html  view_purchase.html
erp/templates/erp/: costcenter_detail.html  costcenter_list.html  funding_detail.html  funding_list.html  purchase_detail.html  purchase_form.html  purchase_list.html
scripts/: generate_transactions.py
