[tool.poetry]
name = "delicious-erp"
version = "0.1.0"
description = ""
authors = ["Astrid Yu <astrid@astrid.tech>"]
readme = "README.md"
packages = [{include = "delicious_erp"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
django-extensions = "^3.2.3"
django-computedfields = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
